Add deployment configuration and build artifacts - Add deployment instructions (DEPLOYMENT_INSTRUCTIONS.md) - Configure GitHub Pages with .nojekyll and 404.html - Update webpack configuration for production builds - Update package.json with deployment scripts - Add built dist directory with compiled assets - Update Bella Vista restaurant images - Configure public/index.html for deployment

--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "A Tinder-like web application for selecting dishes from restaurant menus",
   "main": "src/index.tsx",
   "scripts": {
-    "dev": "npm run css:generate && webpack serve --mode development",
+    "dev": "npm run css:generate:once && webpack serve --mode development",
     "serve": "webpack serve --mode development",
-    "build": "npm run css:generate && webpack --mode production",
+    "build": "npm run css:generate:once && webpack --mode production",
     "test": "jest",
     "test:coverage": "jest --coverage",
     "test:watch": "jest --watch",
@@ -15,8 +15,11 @@
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
     "css:generate": "tcm src --pattern 'src/**/*.module.scss' --watch",
-    "css:generate:once": "tcm src --pattern 'src/**/*.module.scss'"
+    "css:generate:once": "tcm src --pattern 'src/**/*.module.scss'",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
+  "homepage": "https://mpmisha.github.io/TindeResturant",
   "keywords": [
     "react",
     "typescript",
@@ -54,11 +57,13 @@
     "@types/react-dom": "^18.2.18",
     "@typescript-eslint/eslint-plugin": "^6.13.1",
     "@typescript-eslint/parser": "^6.13.1",
+    "copy-webpack-plugin": "^13.0.0",
     "css-loader": "^6.8.1",
     "eslint": "^8.54.0",
     "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "gh-pages": "^6.3.0",
     "html-webpack-plugin": "^5.5.3",
     "husky": "^8.0.3",
     "jest": "^29.7.0",
