--- a/package.json
+++ b/package.json
@@ -36,10 +36,12 @@
     "@fluentui/react-card": "^9.0.59",
     "@fluentui/react-divider": "^9.2.54",
     "@fluentui/react-image": "^9.1.44",
+    "@fluentui/react-input": "^9.7.0",
     "@fluentui/react-provider": "^9.13.7",
     "@fluentui/react-spinner": "^9.4.1",
     "@fluentui/react-text": "^9.4.7",
     "@fluentui/react-theme": "^9.1.16",
+    "firebase": "^12.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.0",
